samples/_failures_safe/1761470038_cac7cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bbc5adde.c: In function ‘main’:
./samples/SAFE/__tmp_bbc5adde.c:179:9: error: expected declaration or statement at end of input
  179 |         }
      |         ^
./samples/SAFE/__tmp_bbc5adde.c:179:9: error: expected declaration or statement at end of input
